--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 
     --clr-primary-400: hsl(228, 39%, 23%);
 
-    --clr-neutral-100: hsl(232, 12%, 13%);
-    --clr-neutral-900: hsl(0 0% 0%);
+    --clr-neutral-900: hsl(232, 12%, 13%);
+    --clr-neutral-100: hsl(0 0% 100%);
 
     --font-family-primary: "Be Vietnam Pro", sans-serif;
 
@@ -168,4 +168,31 @@ h1 {
 }
 .fs-600 {
     font-size: var(--fs-600);
+}
+
+.container {
+    --max-width: 1110px;
+    --padding: 1rem;
+
+    background-color: var(--bgcolor);
+    width: min(var(--max-width), 100% - (var(--padding) * 2));
+    margin-inline: auto;
+}
+
+.even-columns {
+    display: grid;
+    gap: 1rem;
+}
+
+@media (min-width: 50em) {
+    .even-columns {
+        grid-auto-flow: column;
+        grid-auto-columns: 1fr;
+    }
+}
+/* general styling */
+body {
+    font-size: var(--fs-body);
+    font-family: var(--ff-body);
+    color: var(--clr-primary-400);
 }
